# kitchen-configurator-monorepo

./: .checkov.yaml  .gitignore  .tflint.hcl  LOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: auto-create-pr.yml  ci.yml  pr-001-infra.yml  stale.yml
analysis/: bRAG-langchain.md  clean-boilerplate-26-dag.json  clean-boilerplate-26.md  cnccoder.md  compositor-wasm.md  fornjot.md  go-microservice-template.md  mfe-gateway-summary.md  microfrontends-nextjs-pages-federation-dag.json  microfrontends-nextjs-pages-federation.md  module-federation-examples-dag.json  module-federation-examples.md  next-forge-dag.json  next-forge.md  tesla-clone-reactjs-dag.json  tesla-clone-reactjs.md
apps/api/: package.json
apps/app/: package.json
apps/gateway/: package.json  tsconfig.json  vitest.config.mts  vitest.env-next.stub.ts
apps/gateway/src/: server.ts
apps/gateway/src/data/: catalog.test.ts  catalog.ts  pricing.ts
apps/gateway/src/resolvers/: index.ts
apps/mfe-config-panel/: next.config.ts  package.json  tsconfig.json
apps/mfe-config-panel/app/: global.css  layout.tsx  page.tsx
apps/mfe-config-panel/src/remotes/: ConfiguratorPanel.tsx
apps/mfe-viewer2d/: next.config.ts  package.json
apps/mfe-viewer2d/app/: global.css  layout.tsx  page.tsx
apps/mfe-viewer2d/src/remotes/: ViewerCanvas.tsx  viewer.module.css
apps/shell/: module-federation.d.ts  next.config.ts  package.json  tsconfig.json
apps/shell/app/: global.css  layout.tsx  page.tsx
apps/shell/components/: LocalConfiguratorPanel.tsx  PerfBudgetIndicator.tsx  TelemetryBootstrap.tsx  ViewerPlaceholder.tsx
apps/shell/lib/: perf.ts  webVitals.ts
apps/shell/styles/: tds-fonts.css
apps/shell/types/: tesla-runtime.d.ts
artifacts/: checkov.sarif  dag.json  plan-staging.tfplan  plan-staging.txt  tflint.xml
docs/: cdn-apq-proof.md  data-layer.md  iac-capacity-proof.md  observability.md  perf-proof.md  phase-plan.md  repo-tree.md  sharding-proof.md
infra/helm/: README.md  values.example.yaml
infra/helm/gateway/: Chart.yaml  values.yaml
infra/helm/gateway/templates/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
infra/helm/lib-service/: Chart.yaml  values.yaml
infra/helm/lib-service/templates/: _helpers.tpl
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/terraform/env/: staging.tfvars
infra/terraform/modules/aurora/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/istio/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/kafka/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/kms/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/network/: main.tf  variables.tf
infra/terraform/modules/otel/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3_cf/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
ops/otel/: collector.yaml
scripts/: ensure-mf-shim.cjs  full-validation.sh  generate-repo-tree.py  go-test-linux.sh  k6-smoke.js  mf-remotes.json  new-pr.sh  phase-prep.sh
services/: README.md  go.work
services/ai-python/: .env.example  README.md  pyproject.toml
services/ai-python/src/ai_advisor/: __init__.py  api.py  config.py  ingest.py  pipeline.py  schema.py  server.py  telemetry.py  vectorstore.py
services/ai-python/tests/: test_pipeline.py
services/compositor-rust/: Cargo.toml  README.md  package.json
services/compositor-rust/scripts/: test.sh
services/compositor-rust/src/: lib.rs
services/go-kit/: go.mod  go.sum
services/manufacturing-rust/: Cargo.toml  README.md
services/manufacturing-rust/crates/cnc-bridge/: Cargo.toml
services/manufacturing-rust/crates/cnc-bridge/src/: lib.rs
services/manufacturing-rust/crates/kernel-adapter/: Cargo.toml
services/manufacturing-rust/crates/kernel-adapter/src/: lib.rs
services/manufacturing-rust/crates/service/: Cargo.toml
services/manufacturing-rust/crates/service/src/: lib.rs  main.rs
services/pricing-go/: README.md  go.mod  go.sum
services/pricing-go/app/: app.go  defaults.go
services/rules-go/: Makefile  README.md  go.mod
services/rules-go/app/: app.go
tools/analysis/: js_dag_analyzer.mjs
(+36 files in other folders)
