[package]
name = "compositor-wasm"
version = "0.1.0"
edition = "2021"
description = "Photon-powered WASM compositor for Parviz viewer MFEs"
license = "Apache-2.0"
repository = "https://example.com/parviz/compositor-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["ImageData"] }
photon-rs = { version = "0.3.3", default-features = false, features = ["enable_wasm"] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
