[package]
name = "manufacturing-cnc-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
cnccoder.workspace = true
manufacturing-kernel-adapter = { path = "../kernel-adapter" }
