[package]
name = "manufacturing-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tokio.workspace = true
uuid.workspace = true
manufacturing-kernel-adapter = { path = "../kernel-adapter" }
manufacturing-cnc-bridge = { path = "../cnc-bridge" }

[dev-dependencies]
tower.workspace = true
